--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="stylesheet" href="./style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Nested Comments App</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div>
+      <h1>Nested Comments App</h1>
+    </div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
