style: :art: give a basic style

--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
   </head>
   <body>
     <div>
-      <h1>Nested Comments App</h1>
+      <main class="wrapper">
+        <h1 class="heading">Nested Comments App</h1>
+        <div class="parent-input-btn">
+          <input type="text" id="comment-input" placeholder="Add your comment" />
+          <button id="comment-button">Comment</button>
+        </div>
+        <div id="comment-container">
+
+        </div>
+      </main>
     </div>
     <script type="module" src="/main.js"></script>
   </body>
